--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <h1>JM-Acessórios e Lazer</h1>
 
 <p>Uma loja para quem procura <strong>conforto</strong> e 
-<strong>qualidade</strong> de todo tipo de equipamento para vocỄ sair laçando!</p>
+<strong>qualidade</strong> de todo tipo de equipamento para você sair laçando!</p>
 
  <p>SELAS;LAÇOS;FREIOS;RÉDEAS,MANTAS e muito mais.</p>
 
- <img src="freio4.jpg">
+ <img src="freio4.jpg" width="20%">
 
- <img src="freioD.png">
+ <img src="freioD.png" width="20%">
 
- <img src="sela.jpg">
+ <img src="sela.jpg" width="20%">
 
- <img src="mantas.jpeg">
+ <img src="mantas.jpeg" width="20%">
 
- <img src="laço.jpeg">
+ <img src="laço.jpeg" width="20%">
 
 
  <h2>Benefícios</h2>
@@ -36,6 +36,25 @@
  
  <iframe width="853" height="480" src="https://www.youtube.com/embed/iECia0ZtjwU" title="TREINAMENTO SÃO RAFAEL - LAÇO COMPRIDO part3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
  Compre pelo nosso <tag>site</tag> ou encomendepelo nosso número -(45) 99993-4596.
   <strong>AQUI VOÇE ENCONTRA TODO TIPO DE PREÇO COM DESCONTO E TUDO!</STRONG>
+
+
+<center><script language="JavaScript">
+    document.write("<font color='#000000' size='3' face='arial'>")
+    var mydate=new Date()
+    var year=mydate.getYear()
+    if (year<2000)
+    year += (year < 1900) ? 1900 : 0
+    var day=mydate.getDay()
+    var month=mydate.getMonth()
+    var daym=mydate.getDate()
+    if (daym<10)
+    daym="0"+daym
+    var dayarray=new Array("Domingo","Segunda-feira","Terça-feira","Quarta-feira","Quinta-feira","Sexta-feira","Sábado")
+    var montharray=new Array(" de Janeiro de "," de Fevereiro de "," de Março de ","de Abril de ","de Maio de ","de Junho de","de Julho de ","de Agosto de ","de Setembro de "," de Outubro de "," de Novembro de "," de Dezembro de ")
+    document.write("   "+dayarray[day]+", "+daym+" "+montharray[month]+year+" ")
+    document.write("</b></i></font>")
+    </script></center>
+
+
